Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16517

'make debs' ignores extra build options

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0, Lustre 2.15.4
    • Lustre 2.15.2
    • None
    • 3
    • 9223372036854775807

      run 'make debs' to build debs for Ubuntu

      root@u0:~/lustre-release# sh ./autogen.sh;  ./configure --disable-lru-resize --with-o2ib=/usr/src/ofa_kernel/default ; make debs 

      But, configure restarts and pick some options, but ignores user defined build options. e.g. '--disable-lru-resize ' above

      touch configure-stamp
      Final value of EXTRAFLAGS: --disable-server --without-zfs --disable-ldiskfs --with-o2ib=/usr/src/ofa_kernel/5.4.0-137-generic --disable-gss
      checking build system type... x86_64-pc-linux-gnu
      checking host system type... x86_64-pc-linux-gnu
      checking target system type... x86_64-pc-linux-gnu
      checking for a BSD-compatible install... /usr/bin/install -c
      

      In the end, packages were built with missing build options.

      root@u0:~/lustre-release# cat config.log 
      This file contains any messages produced by compilers while
      running configure, to aid debugging if configure makes a mistake.
      
      It was created by Lustre configure 2.14.0_ddn74, which was
      generated by GNU Autoconf 2.69.  Invocation command line was
      
        $ ./configure --disable-dependency-tracking --with-linux=/lib/modules/5.4.0-137-generic/build --with-linux-obj=/usr/src/linux-headers-5.4.0-1
      37-generic --disable-snmp --enable-quota --disable-server --without-zfs --disable-ldiskfs --with-o2ib=/usr/src/ofa_kernel/5.4.0-137-generic --d
      isable-gss --with-o2ib=/usr/src/ofa_kernel/5.4.0-137-generic
      

            yujian Jian Yu
            sihara Shuichi Ihara
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: